--- a/frontend/css/spectral.css
+++ b/frontend/css/spectral.css
@@ -104,6 +104,7 @@
     gap: 15px;
 }
 .add-pesticide-button button {
+    min-width: 100px;
     padding: 10px 20px;
     background-color: var(--primary-color);
     color: white;
@@ -196,11 +197,72 @@
     flex-direction: column;
     gap: 10px;
 }
+#results-container h2 {
+    color: var(--primary-color);
+    font-weight: bold;
+}
 .results-items {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
 }
+#results-container button {
+    min-width: 100px;
+    padding: 10px 20px;
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 1em;
+    transition: background-color 0.3s ease;
+}
+
+#results-container button:hover {
+    background-color: var(--gradient-dropdown-color);
+}
+
+.error-message {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.error-message p {
+    font-weight: bold;
+    color: var(--accent-color);
+}
+
+
+#edit-spectrum-form {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#edit-spectrum-form input {
+    min-width: 0;
+    flex: 1 1 auto;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+#pesticide-modify-upload  input{
+    border: 2px dashed var(--primary-color);
+}
+#pesticide-modify-upload input[type='file'] {
+    background-color: var(--gradient-color);
+    color: var(--primary-color);
+    font-weight: bold;
+}
+#pesticide-modify-upload input[type='file']::-webkit-file-upload-button {
+    background-color: var(--primary-color);
+    border-radius: 5px;
+    color: var(--secondary-color);
+}
+
+
 
 
 footer {
