--- a/frontend/css/analysis.css
+++ b/frontend/css/analysis.css
@@ -41,6 +41,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     flex: 1;
     min-width: 300px;
     border: 2px dashed #ddd;
@@ -52,6 +53,10 @@
 
 .upload-area:hover {
     border-color: var(--gradient-dropdown-color);
+}
+.upload-area.dragover {
+    border-color: var(--primary-color);
+    /*opacity: 10%;*/
 }
 
 .upload-area i {
@@ -74,7 +79,7 @@
     display: none;
 }
 
-.upload-btn {
+.select-upload-btn {
     background-color: var(--primary-color);
     color: white;
     border: none;
@@ -84,7 +89,7 @@
     transition: background-color 0.3s;
 }
 
-.upload-btn:hover {
+.select-upload-btn:hover {
     background-color: var(--gradient-dropdown-color);
 }
 
@@ -96,6 +101,14 @@
 .file-info h3 {
     font-size: 18px;
     margin-bottom: 15px;
+}
+
+.file-info-item {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    /*font-weight: bold;*/
 }
 
 .file-list {
@@ -119,6 +132,21 @@
     justify-content: flex-end;
     gap: 15px;
     margin-top: 15px;
+}
+
+.remove-file {
+    padding: 5px;
+    color: var(--text-color);
+    background-color: var(--primary-color);
+    align-items: center;
+    border: 1px solid var(--primary-color);
+    border-radius: 4px;
+    transition: all 0.3s ease;
+}
+
+.remove-file:hover {
+    background: var(--accent-color);
+    border: 1px dashed var(--accent-color);
 }
 
 .action-btn {
