--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -26,8 +26,9 @@ body {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0.25rem;
+    padding: 10px 0;
     background: var(--primary-color);
+
 }
 
 /*logo整体*/
@@ -38,13 +39,13 @@ body {
 
 /*logo标题*/
 .logo h1 {
-    font-size: 1.25rem;
+    font-size: 25px;
     color: var(--text-color);
 }
 
 /*logo大小*/
 .logo img {
-    height: 40px;
+    height: 50px;
     padding-right: 20px;
     margin-inline: 10px;
 }
